Cambio el index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Ricomida/title>
 </head>
 <body>
-    <h1>Ricomida</h1>
+    
+    <header>
+        <h1>Este es Ricomida</h1>
+    </header>
+    
     <hr>
 </body>
 </html>
