--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Este es Ricomida</h1>
     </header>
-    <h1>Hola Mundo</h1>
+    <h1>Hola Mundo en la nueva rama</h1>
     
     <hr>
 </body>
